--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
   "name": "hexo-generator-amp",
-  "version": "3.2.0",
+  "version": "3.2.1",
   "main": "index",
   "dependencies": {
-    "amphtml-validator": "^1.0.21",
-    "bluebird" : "^3.5.1",
-    "cheerio": "^1.0.0-rc.2",
-    "ejs": "^2.5.7",
-    "follow-redirects": "^1.2.6",
-    "hasha": "^3.0.0",
-    "hexo-fs": "^1.0.2",
-    "hexo-util": "^0.6.3",
-    "html-minifier": "^3.5.8",
-    "image-size": "^0.6.2",
-    "log-util": "^1.2.0",
-    "lodash": "^4.17.4",
-    "mkdirp": "^0.5.1",
-    "moment": "^2.20.1",
+    "amphtml-validator": "^1.0.35",
+    "bluebird": "^3.7.2",
+    "cheerio": "^1.0.0-rc.10",
+    "ejs": "^3.1.6",
+    "follow-redirects": "^1.14.4",
+    "hasha": "^5.2.2",
+    "hexo-fs": "^3.1.0",
+    "hexo-util": "^2.5.0",
+    "html-minifier": "^4.0.0",
+    "image-size": "^1.0.0",
+    "log-util": "^2.3.0",
+    "lodash": "^4.17.21",
+    "mkdirp": "^1.0.4",
+    "moment": "^2.29.1",
     "nib": "^1.1.2",
-    "node-sass": "^4.12.0",
+    "node-sass": "^6.0.1",
     "object-assign": "^4.1.1",
-    "pug": "^2.0.0-rc.4",
-    "stylus": "^0.54.5"
+    "pug": "^3.0.2",
+    "stylus": "^0.55.0"
   },
   "description": "AMP ⚡ HTML (Accelerated Mobile Pages) generator for Hexo.",
   "devDependencies": {},
